--- a/MachineLearning/Numpy-operations-1.ipynb
+++ b/MachineLearning/Numpy-operations-1.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numpy.array 的基本操作"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +18,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,8 +30,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### reshape 将一维数组转化为二维数组"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +49,13 @@
        "       [10, 11, 12, 13, 14]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = np.arange(15).reshape(3,5) # reshape 将一维数组转化为二维数组\n",
+    "X = np.arange(15).reshape(3,5) \n",
     "X"
    ]
   },
@@ -53,8 +67,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  查看数组是几维数组  ndim 属性"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +84,20 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.ndim #查看数组是几维数组"
+    "x.ndim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3x5 的二维数组"
    ]
   },
   {
@@ -93,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "######  返回一个元组"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -109,7 +144,7 @@
     }
    ],
    "source": [
-    "x.shape # 返回一个元组"
+    "x.shape "
    ]
   },
   {
@@ -130,6 +165,13 @@
    ],
    "source": [
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 矩阵元素个数"
    ]
   },
   {
@@ -240,6 +282,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 表示倒数第一个元素"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -256,7 +305,14 @@
     }
    ],
    "source": [
-    "x[-1] # 表示倒数第一个元素"
+    "x[-1] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 对于二维可以使用这个方式访问 numpy.array 的第一个元素，但是numpy中不推荐这种写法"
    ]
   },
   {
@@ -298,6 +354,11 @@
    "source": [
     "X[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
