--- a/MachineLearning/Numpy-0.ipynb
+++ b/MachineLearning/Numpy-0.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'1.14.4'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 获取存储数据类型"
+    "### 使用dtype获取存储数据类型"
    ]
   },
   {
@@ -433,8 +433,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 创建一个有10个元素的0矩阵"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -443,13 +450,13 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.zeros(10)"
+    " np.zeros(10)  "
    ]
   },
   {
@@ -493,8 +500,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3x5的矩阵"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -505,18 +519,25 @@
        "       [0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.zeros((3,5))"
+    "np.zeros((3,5)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3行5列，类型为int的举证"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -527,18 +548,25 @@
        "       [0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.zeros(shape=(3,5), dtype=int)"
+    "np.zeros(shape=(3,5), dtype=int) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 创建一个全部为1的向量"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -547,13 +575,13 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.ones(10)"
+    "np.ones(10) "
    ]
   },
   {
@@ -575,12 +603,19 @@
     }
    ],
    "source": [
-    "np.ones((3,5))"
+    "np.ones((3,5)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3行5列，每个元素都是666的矩阵"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -591,18 +626,25 @@
        "       [666, 666, 666, 666, 666]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.full((3,5),666)"
+    "np.full((3,5),666) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 参数标签 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -613,35 +655,42 @@
        "       [666., 666., 666., 666., 666.]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.full(shape=(3,5), fill_value=666.0)"
+    "np.full(shape=(3,5), fill_value=666.0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 显式写出参数名时，参数的顺序是可以改变的"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[666., 666., 666., 666., 666.],\n",
-       "       [666., 666., 666., 666., 666.],\n",
-       "       [666., 666., 666., 666., 666.]])"
+       "array([[666, 666, 666, 666, 666],\n",
+       "       [666, 666, 666, 666, 666],\n",
+       "       [666, 666, 666, 666, 666]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.full(fill_value=666.0,shape=(3,5))"
+    "np.full(fill_value=666,shape=(3,5))"
    ]
   },
   {
@@ -652,8 +701,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  `range`中最多可以传入三个参数 第一个参数是起始点，第二个参数是终止点（终止点是不包含的点）第三个参数是步长"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +718,7 @@
        "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,8 +728,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `arange`参数的意义和`range` 完全相同"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +745,7 @@
        "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,8 +755,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `range` 不能传入浮点数"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -703,13 +773,20 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-467c61f72d62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-467c61f72d62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
      ]
     }
    ],
    "source": [
     "[i for i in range(0,20,0.2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `numpy`的 `arange`可以传入浮点数"
    ]
   },
   {
@@ -742,6 +819,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 不传入步长，默认值为1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -759,6 +843,13 @@
    ],
    "source": [
     "np.arange(0,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 如果只有一个参数，表示省略了起始点，起始点默认值为0"
    ]
   },
   {
@@ -789,6 +880,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 从0到20区间内，等长的截出10个点，形成一个等差数列，每个元素之间的间距是相等的"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -807,6 +905,13 @@
    ],
    "source": [
     "np.linspace(0,20,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 如果要生成从0到20以2为步长的一个等差数列，使用`linspace`该如何传参呢"
    ]
   },
   {
@@ -837,8 +942,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 生成从0到10之间的一个随机数"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -847,13 +959,20 @@
        "3"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.random.randint(0,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 随机生成一个向量，还有10个元素，每个元素都在1到10之间"
    ]
   },
   {
@@ -877,6 +996,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `randint` 是一个前闭后开的区间 如下面代码表示的区间是 [0,1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -897,6 +1023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 表意更明确的写法，最后一个参数带上参数名"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -914,6 +1047,13 @@
    ],
    "source": [
     "np.random.randint(4,8,size=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `size` 也是传入一个元组，生成3行5列矩阵"
    ]
   },
   {
@@ -958,6 +1098,13 @@
    ],
    "source": [
     "np.random.randint(4,8,size=(3,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 指定随机种子，使用相同的种子，生成的随机矩阵是相同的，否则是不同的"
    ]
   },
   {
@@ -1015,6 +1162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 生成随机浮点数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -1032,6 +1186,13 @@
    ],
    "source": [
     "np.random.random()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 生成10个元素的随机矩阵，浮点数 在(0...1) 之间均匀分布的"
    ]
   },
   {
@@ -1053,6 +1214,13 @@
    ],
    "source": [
     "np.random.random(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3行5列浮点数随机矩阵"
    ]
   },
   {
@@ -1078,6 +1246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  生成符合正太分布的浮点数   （均值为0 方差为1 分布的随机浮点数） "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -1098,6 +1273,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 生成均值为0 方差为100 的随机浮点数  可以指定均值和方差"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -1115,6 +1297,13 @@
    ],
    "source": [
     "np.random.normal(10,100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 生成均值为0 方差为1 分布的3x5的随机矩阵  正太分布的矩阵"
    ]
   },
   {
@@ -1140,8 +1329,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 函数的参数该如何查询\n",
+    "1. 使用文档查询\n",
+    "2. notebook 查询   如果对`np.random.normal`参数不清楚可以使用  np.random.norma + ？的方式查询\n",
+    "3. 也可以查询某个模块，例如查询np.random 模块可以使用 `np.random?`  查询\n",
+    "4. 也可以使用help 如`help(np.random.normal)`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
